--- a/templates/hnlg.html
+++ b/templates/hnlg.html
@@ -182,7 +182,11 @@
         {% for list in resultList %}
         <h4>
         {% for j in list %}
-          {% if j[0] == 'new' %}
+          {% if j[2] == 'n' %}
+            <span class="label label-success generated-word">{{j[1]}}&nbsp;({{j[2]}})</span>&nbsp;
+          {% if j[2] == 'v' %}
+            <span class="label label-success generated-word">{{j[1]}}&nbsp;({{j[2]}})</span>&nbsp;
+          {% if j[2] == 'a' %}
             <span class="label label-success generated-word">{{j[1]}}&nbsp;({{j[2]}})</span>&nbsp;
           {% else %}
             <span class="label label-default generated-word">{{j[1]}}&nbsp;({{j[2]}})</span>&nbsp;
