change word type

--- a/templates/hnlg.html
+++ b/templates/hnlg.html
@@ -126,14 +126,18 @@
         <form action="/result" method="POST">
           <div class="switch-field">
             <div class="switch-title"><b>Area</b></div>
-            <input type="radio" id="switch_area_1" name="area" value="city_centre" checked/>
+            <input type="radio" id="switch_area_0" name="area" value="none" checked/>
+            <label for="switch_area_0">None</label>
+            <input type="radio" id="switch_area_1" name="area" value="city_centre"/>
             <label for="switch_area_1">City Centre</label>
             <input type="radio" id="switch_area_2" name="area" value="riverside" />
             <label for="switch_area_2">Riverside</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Customer Rating</b></div>
-            <input type="radio" id="switch_customer_1" name="customerRating" value="1_out_of_5" checked/>
+            <input type="radio" id="switch_customer_0" name="customerRating" value="none" checked/>
+            <label for="switch_customer_0">None</label>
+            <input type="radio" id="switch_customer_1" name="customerRating" value="1_out_of_5"/>
             <label for="switch_customer_1">1 out of 5</label>
             <input type="radio" id="switch_customer_2" name="customerRating" value="3_out_of_5" />
             <label for="switch_customer_2">3 out of 5</label>
@@ -148,7 +152,9 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Eating Type</b></div>
-            <input type="radio" id="switch_eating_1" name="eatType" value="coffee" checked/>
+            <input type="radio" id="switch_eating_0" name="eatType" value="none" checked/>
+            <label for="switch_eating_0">None</label>
+            <input type="radio" id="switch_eating_1" name="eatType" value="coffee"/>
             <label for="switch_eating_1">Coffee</label>
             <input type="radio" id="switch_eating_2" name="eatType" value="pub" />
             <label for="switch_eating_2">Pub</label>
@@ -157,14 +163,18 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Family Friendly</b></div>
-            <input type="radio" id="switch_family_1" name="familyFriendly" value="no" checked/>
+            <input type="radio" id="switch_family_0" name="familyFriendly" value="none" checked/>
+            <label for="switch_family_0">None</label>
+            <input type="radio" id="switch_family_1" name="familyFriendly" value="no"/>
             <label for="switch_family_1">No</label>
             <input type="radio" id="switch_family_2" name="familyFriendly" value="yes" />
             <label for="switch_family_2">Yes</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Food</b></div>
-            <input type="radio" id="switch_food_1" name="food" value="chinese" checked />
+            <input type="radio" id="switch_food_0" name="food" value="none" checked />
+            <label for="switch_food_0">None</label>
+            <input type="radio" id="switch_food_1" name="food" value="chinese" />
             <label for="switch_food_1">Chinese</label>
             <input type="radio" id="switch_food_2" name="food" value="english" />
             <label for="switch_food_2">English</label>
@@ -181,7 +191,9 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Name</b></div>
-            <input type="radio" id="switch_name_1" name="name" value="alimentum" checked/>
+            <input type="radio" id="switch_name_0" name="name" value="none" checked/>
+            <label for="switch_name_0">None</label>
+            <input type="radio" id="switch_name_1" name="name" value="alimentum" />
             <label for="switch_name_1">Alimentum</label>
             <input type="radio" id="switch_name_2" name="name" value="aromi" />
             <label for="switch_name_2">Aromi</label>
@@ -252,7 +264,9 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Near</b></div>
-            <input type="radio" id="switch_near_1" name="near" value="all_bar_one" checked/>
+            <input type="radio" id="switch_near_0" name="near" value="none" checked/>
+            <label for="switch_near_0">None</label>
+            <input type="radio" id="switch_near_1" name="near" value="all_bar_one" />
             <label for="switch_near_1">All Bar One</label>
             <input type="radio" id="switch_near_2" name="near" value="avalon" />
             <label for="switch_near_2">Avalon</label>
@@ -293,7 +307,9 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Price Range</b></div>
-            <input type="radio" id="switch_pricerange_1" name="priceRange" value="cheap" checked/>
+            <input type="radio" id="switch_pricerange_0" name="priceRange" value="none" checked/>
+            <label for="switch_pricerange_0">None</label>
+            <input type="radio" id="switch_pricerange_1" name="priceRange" value="cheap" />
             <label for="switch_pricerange_1">Cheap</label>
             <input type="radio" id="switch_pricerange_2" name="priceRange" value="high" />
             <label for="switch_pricerange_2">High</label>
@@ -317,21 +333,23 @@
     <div class="col-sm-9" align="center">
       <div class="row">
         <h3>Generated Sentences</h3>
+        <table style="width:20%; border: 0px;">
         {% for k,v in request.items() %}
-          <b>{{k}}:</b> {{v[0]}}<br>
+          <tr><td><b>{{k}}:</b></td> <td>{{v}}</td></tr>
         {% endfor %}
+        </table>
         <hr>
         {% for list in resultList %}
         <h4>
         {% for j in list %}
-          {% if j[2] == 'n' %}
-            <span class="label label-success generated-word">{{j[1]}}</span>&nbsp;
-          {% elif j[2] == 'v' %}
-            <span class="label label-primary generated-word">{{j[1]}}</span>&nbsp;
-          {% elif j[2] == 'a' %}
-            <span class="label label-info generated-word">{{j[1]}}</span>&nbsp;
-          {% elif j[2] == 'other' %}
-            <span class="label label-warning generated-word">{{j[1]}}</span>&nbsp;
+          {% if j[1] == 'n' %}
+            <span class="label label-success generated-word">{{j[0]}}</span>&nbsp;
+          {% elif j[1] == 'v' %}
+            <span class="label label-primary generated-word">{{j[0]}}</span>&nbsp;
+          {% elif j[1] == 'a' %}
+            <span class="label label-info generated-word">{{j[0]}}</span>&nbsp;
+          {% elif j[1] == 'other' %}
+            <span class="label label-warning generated-word">{{j[0]}}</span>&nbsp;
           {% endif %}   
         {% endfor %}
         </h4>
