--- a/templates/hnlg.html
+++ b/templates/hnlg.html
@@ -123,7 +123,7 @@
       </ul><br> -->
 
       <div class="input-group">
-        <form action="/result" method="POST">
+        <form action="https://140.112.29.227:3000/predict" method="POST">
           <div class="switch-field">
             <div class="switch-title"><b>Area</b></div>
             <input type="radio" id="switch_area_0" name="area" value="none" checked/>
@@ -154,7 +154,7 @@
             <div class="switch-title"><b>Eating Type</b></div>
             <input type="radio" id="switch_eating_0" name="eatType" value="none" checked/>
             <label for="switch_eating_0">None</label>
-            <input type="radio" id="switch_eating_1" name="eatType" value="coffee"/>
+            <input type="radio" id="switch_eating_1" name="eatType" value="coffee_shop"/>
             <label for="switch_eating_1">Coffee</label>
             <input type="radio" id="switch_eating_2" name="eatType" value="pub" />
             <label for="switch_eating_2">Pub</label>
