--- a/templates/hnlg.html
+++ b/templates/hnlg.html
@@ -123,10 +123,11 @@
       </ul><br> -->
 
       <div class="input-group">
-        <form action="https://140.112.29.227:3000/predict" method="POST">
+        <!-- <form action="http://140.112.29.227:3000/predict" method="POST"> -->
+        <form action="/result" method="POST">
           <div class="switch-field">
             <div class="switch-title"><b>Area</b></div>
-            <input type="radio" id="switch_area_0" name="area" value="none" checked/>
+            <input type="radio" id="switch_area_0" name="area" value="" checked/>
             <label for="switch_area_0">None</label>
             <input type="radio" id="switch_area_1" name="area" value="city_centre"/>
             <label for="switch_area_1">City Centre</label>
@@ -135,7 +136,7 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Customer Rating</b></div>
-            <input type="radio" id="switch_customer_0" name="customerRating" value="none" checked/>
+            <input type="radio" id="switch_customer_0" name="customerRating" value="" checked/>
             <label for="switch_customer_0">None</label>
             <input type="radio" id="switch_customer_1" name="customerRating" value="1_out_of_5"/>
             <label for="switch_customer_1">1 out of 5</label>
@@ -152,7 +153,7 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Eating Type</b></div>
-            <input type="radio" id="switch_eating_0" name="eatType" value="none" checked/>
+            <input type="radio" id="switch_eating_0" name="eatType" value="" checked/>
             <label for="switch_eating_0">None</label>
             <input type="radio" id="switch_eating_1" name="eatType" value="coffee_shop"/>
             <label for="switch_eating_1">Coffee</label>
@@ -163,7 +164,7 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Family Friendly</b></div>
-            <input type="radio" id="switch_family_0" name="familyFriendly" value="none" checked/>
+            <input type="radio" id="switch_family_0" name="familyFriendly" value="" checked/>
             <label for="switch_family_0">None</label>
             <input type="radio" id="switch_family_1" name="familyFriendly" value="no"/>
             <label for="switch_family_1">No</label>
@@ -172,7 +173,7 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Food</b></div>
-            <input type="radio" id="switch_food_0" name="food" value="none" checked />
+            <input type="radio" id="switch_food_0" name="food" value="" checked />
             <label for="switch_food_0">None</label>
             <input type="radio" id="switch_food_1" name="food" value="chinese" />
             <label for="switch_food_1">Chinese</label>
@@ -191,7 +192,7 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Name</b></div>
-            <input type="radio" id="switch_name_0" name="name" value="none" checked/>
+            <input type="radio" id="switch_name_0" name="name" value="" checked/>
             <label for="switch_name_0">None</label>
             <input type="radio" id="switch_name_1" name="name" value="alimentum" />
             <label for="switch_name_1">Alimentum</label>
@@ -264,7 +265,7 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Near</b></div>
-            <input type="radio" id="switch_near_0" name="near" value="none" checked/>
+            <input type="radio" id="switch_near_0" name="near" value="" checked/>
             <label for="switch_near_0">None</label>
             <input type="radio" id="switch_near_1" name="near" value="all_bar_one" />
             <label for="switch_near_1">All Bar One</label>
@@ -307,7 +308,7 @@
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Price Range</b></div>
-            <input type="radio" id="switch_pricerange_0" name="priceRange" value="none" checked/>
+            <input type="radio" id="switch_pricerange_0" name="priceRange" value="" checked/>
             <label for="switch_pricerange_0">None</label>
             <input type="radio" id="switch_pricerange_1" name="priceRange" value="cheap" />
             <label for="switch_pricerange_1">Cheap</label>
