--- a/templates/hnlg.html
+++ b/templates/hnlg.html
@@ -148,18 +148,16 @@ $(document).ready(function() {
         <!-- <form id="switch-form"> -->
           <div class="switch-field">
             <div class="switch-title"><b>Area</b></div>
-            <input type="radio" id="switch_area_0" name="area" value="" checked/>
-            <label for="switch_area_0">None</label>
-            <input type="radio" id="switch_area_1" name="area" value="city_centre"/>
+            <input type="radio" id="switch_area_1" name="area" value="city_centre" checked/>
             <label for="switch_area_1">City Centre</label>
-            <input type="radio" id="switch_area_2" name="area" value="riverside" />
+            <input type="radio" id="switch_area_2" name="area" value="riverside"/>
             <label for="switch_area_2">Riverside</label>
+            <input type="radio" id="switch_area_0" name="area" value="" />
+            <label for="switch_area_0">None</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Customer Rating</b></div>
-            <input type="radio" id="switch_customer_0" name="customerRating" value="" checked/>
-            <label for="switch_customer_0">None</label>
-            <input type="radio" id="switch_customer_1" name="customerRating" value="1_out_of_5"/>
+            <input type="radio" id="switch_customer_1" name="customerRating" value="1_out_of_5" checked/>
             <label for="switch_customer_1">1 out of 5</label>
             <input type="radio" id="switch_customer_2" name="customerRating" value="3_out_of_5" />
             <label for="switch_customer_2">3 out of 5</label>
@@ -171,32 +169,32 @@ $(document).ready(function() {
             <label for="switch_customer_5">High</label>
             <input type="radio" id="switch_customer_6" name="customerRating" value="low" />
             <label for="switch_customer_6">Low</label>
+            <input type="radio" id="switch_customer_0" name="customerRating" value="" />
+            <label for="switch_customer_0">None</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Eating Type</b></div>
-            <input type="radio" id="switch_eating_0" name="eatType" value="" checked/>
-            <label for="switch_eating_0">None</label>
-            <input type="radio" id="switch_eating_1" name="eatType" value="coffee_shop"/>
+            <input type="radio" id="switch_eating_1" name="eatType" value="coffee_shop" checked/>
             <label for="switch_eating_1">Coffee</label>
             <input type="radio" id="switch_eating_2" name="eatType" value="pub" />
             <label for="switch_eating_2">Pub</label>
             <input type="radio" id="switch_eating_3" name="eatType" value="restaurant" />
             <label for="switch_eating_3">Restaurant</label>
+            <input type="radio" id="switch_eating_0" name="eatType" value=""/>
+            <label for="switch_eating_0">None</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Family Friendly</b></div>
-            <input type="radio" id="switch_family_0" name="familyFriendly" value="" checked/>
-            <label for="switch_family_0">None</label>
-            <input type="radio" id="switch_family_1" name="familyFriendly" value="no"/>
+            <input type="radio" id="switch_family_1" name="familyFriendly" value="no" checked/>
             <label for="switch_family_1">No</label>
             <input type="radio" id="switch_family_2" name="familyFriendly" value="yes" />
             <label for="switch_family_2">Yes</label>
+            <input type="radio" id="switch_family_0" name="familyFriendly" value="" />
+            <label for="switch_family_0">None</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Food</b></div>
-            <input type="radio" id="switch_food_0" name="food" value="" checked />
-            <label for="switch_food_0">None</label>
-            <input type="radio" id="switch_food_1" name="food" value="chinese" />
+            <input type="radio" id="switch_food_1" name="food" value="chinese" checked/>
             <label for="switch_food_1">Chinese</label>
             <input type="radio" id="switch_food_2" name="food" value="english" />
             <label for="switch_food_2">English</label>
@@ -210,12 +208,13 @@ $(document).ready(function() {
             <label for="switch_food_6">Italian</label>
             <input type="radio" id="switch_food_7" name="food" value="japanese" />
             <label for="switch_food_7">Japanese</label>
+            <input type="radio" id="switch_food_0" name="food" value="" />
+            <label for="switch_food_0">None</label>
+
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Name</b></div>
-            <input type="radio" id="switch_name_0" name="name" value="" checked/>
-            <label for="switch_name_0">None</label>
-            <input type="radio" id="switch_name_1" name="name" value="alimentum" />
+            <input type="radio" id="switch_name_1" name="name" value="alimentum" checked />
             <label for="switch_name_1">Alimentum</label>
             <input type="radio" id="switch_name_2" name="name" value="aromi" />
             <label for="switch_name_2">Aromi</label>
@@ -283,12 +282,12 @@ $(document).ready(function() {
             <label for="switch_name_33">Wildwood</label>
             <input type="radio" id="switch_name_34" name="name" value="zizzi" />
             <label for="switch_name_34">Zizzi</label>
+            <input type="radio" id="switch_name_0" name="name" value=""/>
+            <label for="switch_name_0">None</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Near</b></div>
-            <input type="radio" id="switch_near_0" name="near" value="" checked/>
-            <label for="switch_near_0">None</label>
-            <input type="radio" id="switch_near_1" name="near" value="all_bar_one" />
+            <input type="radio" id="switch_near_1" name="near" value="all_bar_one" checked />
             <label for="switch_near_1">All Bar One</label>
             <input type="radio" id="switch_near_2" name="near" value="avalon" />
             <label for="switch_near_2">Avalon</label>
@@ -326,12 +325,12 @@ $(document).ready(function() {
             <label for="switch_near_18">The Sorrento</label>
             <input type="radio" id="switch_near_19" name="near" value="yippee_noodle_bar" />
             <label for="switch_near_19">Yippee Noodle Bar</label>
+            <input type="radio" id="switch_near_0" name="near" value=""/>
+            <label for="switch_near_0">None</label>
           </div>
           <div class="switch-field">
             <div class="switch-title"><b>Price Range</b></div>
-            <input type="radio" id="switch_pricerange_0" name="priceRange" value="" checked/>
-            <label for="switch_pricerange_0">None</label>
-            <input type="radio" id="switch_pricerange_1" name="priceRange" value="cheap" />
+            <input type="radio" id="switch_pricerange_1" name="priceRange" value="cheap" checked />
             <label for="switch_pricerange_1">Cheap</label>
             <input type="radio" id="switch_pricerange_2" name="priceRange" value="high" />
             <label for="switch_pricerange_2">High</label>
@@ -343,6 +342,8 @@ $(document).ready(function() {
             <label for="switch_pricerange_5">more than £30</label>
             <input type="radio" id="switch_pricerange_6" name="priceRange" value="20_25" />
             <label for="switch_pricerange_6">£20-25</label>
+            <input type="radio" id="switch_pricerange_0" name="priceRange" value=""/>
+            <label for="switch_pricerange_0">None</label>
           </div>
           
           <div class="switch-submit" align="center">
